scenarios/multicluster/shared_control_plane_scenario/samples/helloworld/helloworld-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
  labels:
    app: helloworld-v2
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-v2
      version: v2
  template:
    metadata:
      labels:
        app: helloworld-v2
        version: v2
    spec:
      containers:
      - name: helloworld-v2
        image: docker.io/istio/examples-helloworld-v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
