scenarios/multicluster/shared_control_plane_scenario/samples/helloworld/helloworld-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-secondary
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld-secondary.sample.svc.cluster.local
        port:
          number: 5000
---
apiVersion: 'networking.istio.io/v1alpha3'
kind: DestinationRule
metadata:
  name: helloworld-secondary
  namespace: sample
spec:
  host: helloworld-secondary
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
